didnt realize there was some overlap again, fixed it forsure this time

--- a/portfolio.css
+++ b/portfolio.css
@@ -100,7 +100,7 @@ body.dark-mode .Sidebar ul li img {
 .icon{
     color: var(--text-color);
     padding: 5px;
-    font-size: 0.8vw;
+    font-size: 0.65vw;
     font-family: 'Jaro', sans-serif;
     background: none;
     border: none;
@@ -167,7 +167,7 @@ main.content {
         font-size: 1.1rem;
     }
     .icon {
-        font-size: 1rem;
+        font-size: 0.75rem;
     }
 }
 .welcome-text{
